--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ body {
 <body>
 <script type="text/javascript" src="d3/d3.v3.js"></script>
 <script>
+var todayDate = d3.time.format("%YYYY-%MM-%DD");
+alert(todayDate);
 
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
     width = 960 - margin.left - margin.right,
