--- a/index.html
+++ b/index.html
@@ -25,23 +25,24 @@ body {
 var todayDatefull = new Date();
 var todayDate = d3.time.format("%Y-%m-%d");
 var filetoday = todayDate(todayDatefull);
+var timeFormat = d3.time.format("%H:%M");
 
 
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
-var x = d3.scale.linear()
-    .range([0, width]);
+//var x = d3.scale.linear()
+//    .range([0, width]);
+var x = d3.time.scale()
+	.range([0, width]);
 
 var y = d3.scale.linear()
     .range([height, 0]);
 
 var color = d3.scale.category10();
 
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom");
+
 
 var yAxis = d3.svg.axis()
     .scale(y)
@@ -56,10 +57,24 @@ var svg = d3.select("body").append("svg")
 d3.csv(filetoday+".csv", function(error, data) {
   if (error) throw error;
 
+
+//data.forEach(function(d){
+//d.timestamp=new Date(d.timestamp*1000);
+//}); 
+
+
   data.forEach(function(d) {
-    d.timestamp = +d.timestamp;
+//    d.timestamp = +d.timestamp;
+	d.timestamp=new Date(d.timestamp*1000);
     d.price = +d.price;
   });
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom")
+    .ticks(12)
+    .tickPadding(5)
+    .tickFormat(timeFormat);
 
   x.domain(d3.extent(data, function(d) { return d.timestamp; })).nice();
   y.domain(d3.extent(data, function(d) { return d.price; })).nice();
@@ -113,6 +128,14 @@ d3.csv(filetoday+".csv", function(error, data) {
       .attr("dy", ".35em")
       .style("text-anchor", "end")
       .text(function(d) { return d; });
+
+svg.append("text")
+        .attr("x", (width / 2))             
+        .attr("y", 5 - (margin.top / 2))
+        .attr("text-anchor", "middle")  
+        .style("font-size", "16px") 
+        .style("text-decoration", "underline")  
+        .text("Price of Bitcoin trades of "+filetoday);
 
 });
 
