--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ body {
 
 .dot {
   stroke: #000;
+  stroke-width: 0.1px;
 }
 
 </style>
@@ -105,7 +106,7 @@ var xAxis = d3.svg.axis()
       .data(data)
     .enter().append("circle")
       .attr("class", "dot")
-      .attr("r", 1)
+      .attr("r", 2)
       .attr("cx", function(d) { return x(d.timestamp); })
       .attr("cy", function(d) { return y(d.price); })
       .style("fill", function(d) { return color(d.sell); });
